--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = scrapy-selenium
-version = 0.0.7
-url = https://github.com/clemfromspace/scrapy-selenium
+name = scrapy-selenium-tmt
+version = 0.0.8
+url = https://github.com/ThunderMind2019/scrapy-selenium
 licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
 description = Scrapy with selenium
 long_description = file:README.md
